upgrade to javafx to 19; update docu; replace com.sun.javafx.PlatformUtil with SystemUtils; bug fixing;